# connector

./: .gitignore  CMakeLists.txt  README.md  connector.cpp  connector.h  eventstream.cpp  eventstream.h  gameevent.cpp  gameevent.h  gameserver.cpp  gameserver.h  morgoth-connector.vdf
src/: CMakeLists.txt  config.h.in  connector.cpp  connector.h  gameserver.cpp  gameserver.h  interfacestore.cpp  interfacestore.h  org.morgoth.connector.gameserver.xml  srcdswrapper.cpp  srcdswrapper.h
